# compymac

./: .env.example  .gitignore  BUILD_STATUS.md  CITATION_BUGS_REPORT.md  DEVIN_ANALYSIS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  METACOGNITIVE_ARCHITECTURE.md  README.md  ROADMAP.md  SETUP.md  START_HERE.md  TEST_REPORT.md  VERIFICATION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  harness-network.html  harness.md  jest.config.js  package.json  pyproject.toml  requirements.txt  test_evidence_gating.py  validation_report_v5.md
20260104-review/: 20260104-arxiv-research.md  20260104-clara-integration.md  20260104-competitor-analysis.md  20260104-compymac-analysis.md  20260104-context-commenting-research.md  20260104-feature-roadmap.md  20260104-rlm-research.md  20260104-visual-browser-hitl.md  20260105-locale2b-integration-report.md  20260106-session-permalinks.md  COMPETITIVE_ANALYSIS_RESEARCH.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MEMORY_ARCHITECTURE_128GB_SPARK.md
CompyMac/: AppDelegate.swift  MemoryService.swift  PermissionGuideWindow.swift  PythonBrowserService.swift  SafariAutomation.swift
CompyMac.xcodeproj/: project.pbxproj
MVPReader/: ARCHITECTURE.md  README.md  __main__.py  cli.py  requirements.txt
Python/: __init__.py  browser_automation_server.py  desktop_automation.py  mock_pyobjc.py  requirements.txt  setup.py
Swift/: AccessibilityPermissionManager.swift  AppDelegate.swift  FinderAutomation.swift  MemoryService.test.swift  PermissionErrorHandler.swift  PythonBrowserService.swift
docs/: AUDITOR_VERIFICATION_DESIGN.md  BROWSER_TOOL_DESIGN.md  CITATION_LINKING_DESIGN.md  COMPETITIVE_GAPS_DESIGN.md  COMPETITIVE_GAPS_V2.md  COMPYMAC_OVERVIEW_AND_TESTING.md  DISTRIBUTED_WORKER_ARCHITECTURE.md  GAP1_INTERACTIVE_UI_DESIGN.md  GAP3_WORKFLOW_CLOSURE_RESEARCH.md  GAP6_MULTI_AGENT_RESEARCH.md  LIBRARY_UI_DESIGN.md  M9_INTEGRATION_TESTING.md  MEMORY_SYSTEM_DESIGN.md  MENU_SYSTEM_DESIGN.md  MULTI_USER_AUTH.md  PDF_INGESTION_IMPLEMENTATION_PLAN.md  Q1-2026-ROADMAP-COMPLETED.md  REAL_WORLD_TESTING_SCENARIOS.md  (+18 more)
(+350 files in other folders)
